# SCDebugger

./: .gitmodules  CMakeLists.txt  Makefile
example/: a.out  hello.cpp
include/: breakpoint.hpp  debugger.hpp
src/: main.cpp
